--- a/src/styles/chromeExtePopUp.scss
+++ b/src/styles/chromeExtePopUp.scss
@@ -1,34 +1,29 @@
-@import url(https://appsforoffice.microsoft.com/fabric/fabric-core/4.0.0/fabric.min.css);
-
+@import "./node_modules/office-ui-fabric-react/dist/sass/Fabric";
 body {
-            padding-top: 20px;
-            padding-bottom: 20px;
-            min-width: 300px;
-            .container{
-                .action-btn {
-                    width: 100%;
-                    text-align: left;
-                    max-width: none !important;
-
-                    @mixin actionBtnChild {
-                        display: inline-block;
-                        margin: 5px;
-                    }
-                    >img {
-                        @include actionBtnChild;
-                    }
-                    &> div {
-                        @include actionBtnChild;
-                        vertical-align: top;
-                        width: 79.8%;
-                    }
-                }
-                
-                .ms-List-cell {
-                    margin-bottom: 10px;
-                    margin-top: 10px;
-                }
+    padding-top: 20px;
+    padding-bottom: 20px;
+    min-width: 300px;
+    .container {
+        .action-btn {
+            width: 100%;
+            text-align: left;
+            max-width: none !important;
+            @mixin actionBtnChild {
+                display: inline-block;
+                margin: 5px;
+            }
+            >img {
+                @include actionBtnChild;
+            }
+            &>div {
+                @include actionBtnChild;
+                vertical-align: top;
+                width: 79.8%;
             }
         }
-        
-        
+        .ms-List-cell {
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+    }
+}
