Changed the style of the title of each action

--- a/src/styles/chromeExtePopUp.scss
+++ b/src/styles/chromeExtePopUp.scss
@@ -19,6 +19,7 @@ body {
                 @include actionBtnChild;
                 vertical-align: top;
                 width: 79.8%;
+                margin-top: -5px;
             }
         }
         .ms-List-cell {
