--- a/src/styles/chromeExtePopUp.scss
+++ b/src/styles/chromeExtePopUp.scss
@@ -14,6 +14,7 @@ body {
             }
             >img {
                 @include actionBtnChild;
+                width: 32px;
             }
             &>div {
                 @include actionBtnChild;
