--- a/src/scripts/actions/styles/components.scss
+++ b/src/scripts/actions/styles/components.scss
@@ -1,35 +1,25 @@
 @import "./node_modules/office-ui-fabric-react/dist/sass/Fabric";
-
 $focusedBorderColor: $ms-color-neutralSecondary;
-
 $bodyBackgroundColor: $ms-color-white;
 $bodyForegroundColor: $ms-color-neutralPrimary;
 
 /* Primary item colors, used for Nav, DetailsList headers, Pivots */
+
 $unselectedBackgroundColor: $bodyBackgroundColor;
 $unselectedForegroundColor: $bodyForegroundColor;
-
 $disabledBackgroundColor: $bodyBackgroundColor;
 $disabledForegroundColor: $ms-color-neutralTertiaryAlt;
-
 $unselectedHoverBackgroundColor: $ms-color-neutralLighterAlt;
 $unselectedHoverForegroundColor: $bodyForegroundColor;
-
 $unselectedActiveBackgroundColor: $ms-color-neutralLight;
 $unselectedActiveForegroundColor: $bodyForegroundColor;
-
 $selectedBackgroundColor: $ms-color-neutralLighter;
 $selectedForegroundColor: $ms-color-neutralPrimary;
-
 $selectedHoverBackgroundColor: $ms-color-neutralLight;
 $selectedHoverForegroundColor: $ms-color-neutralDark;
-
 $selectedActiveBackgroundColor: $ms-color-neutralTertiaryAlt;
 $selectedActiveForegroundColor: $ms-color-neutralPrimary;
-
 $dividerColor: $ms-color-neutralLight;
-
-
 @mixin focus-border($padding: 0, $color: $focusedBorderColor) {
     &::-moz-focus-inner {
         // Clear the focus border in Firefox. Reference: http://stackoverflow.com/a/199319/1436671
@@ -157,4 +147,19 @@ $dividerColor: $ms-color-neutralLight;
     color: $ms-color-neutralTertiary;
     font-size: $ms-font-size-l;
     flex-shrink: 0;
+}
+
+.ms-List-cell {
+    width: 50%;
+    display: inline-block;
+    &:nth-child(odd) {
+        .ms-ListBasicExample-itemCell {
+            margin-right: 5px;
+        }
+    }
+    &:nth-child(even) {
+        .ms-ListBasicExample-itemCell {
+            margin-left: 5px;
+        }
+    }
 }
