compatible with sp modern pages

--- a/src/scripts/actions/styles/components.scss
+++ b/src/scripts/actions/styles/components.scss
@@ -248,6 +248,10 @@ $dividerColor: $ms-color-neutralLight;
             }
         }
     }
+    h2{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
     
 }
 
