Updated Ui-Fabric version

--- a/src/scripts/actions/styles/components.scss
+++ b/src/scripts/actions/styles/components.scss
@@ -324,4 +324,7 @@ $dividerColor: $ms-color-neutralLight;
         .ms-ListFeature-toggle {
             margin-top: -5px;
         }
+        .ms-ListBasicExample-itemCell {
+            min-height: 60px;
+        }
  }
