Set the width of th image

--- a/src/styles/chromeExtePopUp.scss
+++ b/src/styles/chromeExtePopUp.scss
@@ -15,6 +15,7 @@ body {
             }
             >img {
                 @include actionBtnChild;
+                width: 32px;
             }
             &>div {
                 @include actionBtnChild;
