--- a/src/styles/chromeExtePopUp.scss
+++ b/src/styles/chromeExtePopUp.scss
@@ -4,10 +4,56 @@ body {
     padding-bottom: 20px;
     min-width: 300px;
     .container {
+        .ms-Button.ms-Button--compound {
+            display: block;
+            height: auto;
+            max-width: 280px;
+            min-height: 72px;
+            padding: 10px;
+        }
+        .ms-Button:hover {
+            background-color: #eaeaea;
+            border-color: #eaeaea;
+        }
+        .ms-Button {
+            outline: transparent;
+            position: relative;
+        }
+        .ms-Button {
+            font-family: "Segoe UI WestEuropean", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+            -webkit-font-smoothing: antialiased;
+            font-size: 14px;
+            font-weight: 400;
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            box-shadow: none;
+            color: #333333;
+            background-color: #f4f4f4;
+            border: 1px solid #f4f4f4;
+            cursor: pointer;
+            display: inline-block;
+            height: 32px;
+            min-width: 80px;
+            padding: 4px 20px 6px;
+        }
+        html[dir=ltr] .ms-Button.ms-Button--compound .ms-Button-description {
+            text-align: left;
+        }
+        .ms-Button.ms-Button--compound .ms-Button-description {
+            color: #666666;
+            display: block;
+            font-size: 12px;
+            position: relative;
+            top: 3px;
+        }
+        .ms-Button-description,
+        .ms-Button-icon {
+            display: none;
+        }
         .action-btn {
             width: 100%;
             text-align: left;
-            padding: 10px;
             max-width: none !important;
             @mixin actionBtnChild {
                 display: inline-block;
