--- a/src/styles/chromeExtePopUp.scss
+++ b/src/styles/chromeExtePopUp.scss
@@ -74,5 +74,8 @@ body {
             margin-bottom: 10px;
             margin-top: 10px;
         }
+        .tool-version{
+            float: right;
+        }
     }
 }
