New custom action Contextual Menu

--- a/src/scripts/actions/styles/components.scss
+++ b/src/scripts/actions/styles/components.scss
@@ -329,6 +329,9 @@ $dividerColor: $ms-color-neutralLight;
         }
     }
 }
+.ms-ContextualMenu-link{
+    margin-left: 0;
+}
 
 // /***   Web/Site Features ***/
 .sp-features {
