Added Title to edit form

--- a/src/scripts/actions/styles/components.scss
+++ b/src/scripts/actions/styles/components.scss
@@ -328,6 +328,9 @@ $dividerColor: $ms-color-neutralLight;
             display: inline-block;
         }
     }
+    .edit-form-title{
+        margin: 10px;
+    }
 }
 .ms-ContextualMenu-link{
     margin-left: 0;
