--- a/src/scripts/actions/styles/components.scss
+++ b/src/scripts/actions/styles/components.scss
@@ -217,6 +217,14 @@ $dividerColor: $ms-color-neutralLight;
             }
         }
     }
+      .ms-Button{
+        .ms-Button-label{
+              vertical-align: top;
+              i{
+                    margin-left: 25px;
+              }
+        }
+      }
 }
 
 
@@ -269,6 +277,9 @@ $dividerColor: $ms-color-neutralLight;
     .ms-List-cell {
         width: 50%;
         display: inline-block;
+        .ms-ListBasicExample-itemCell{
+          min-height: 90px;
+        }
         &:nth-child(odd) {
             .ms-ListBasicExample-itemCell {
                 margin-right: 5px;
