Added validation to the dropdown list

--- a/src/scripts/actions/styles/components.scss
+++ b/src/scripts/actions/styles/components.scss
@@ -339,6 +339,9 @@ $dividerColor: $ms-color-neutralLight;
             display: inline-block;
         }
     }
+    .ms-Dropdown{
+      margin-bottom: 0px;
+    }
     .edit-form-title{
         margin: 10px;
     }
