--- a/src/scripts/actions/styles/components.scss
+++ b/src/scripts/actions/styles/components.scss
@@ -284,6 +284,9 @@ $dividerColor: $ms-color-neutralLight;
         display: inline-block;
         .ms-ListBasicExample-itemCell {
             min-height: 90px;
+            &:hover{
+                background-color: transparent !important;
+            }
         }
         &:nth-child(odd) {
             .ms-ListBasicExample-itemCell {
@@ -302,25 +305,11 @@ $dividerColor: $ms-color-neutralLight;
     a.ms-ListItem-action {
         display: block;
     }
-    i.ms-Icon {
-        &.ms-Icon--AddTo {
-            vertical-align: middle;
-            padding-bottom: 3px;
-            padding-right: 3px;
-        }
-        &.ms-Icon--Settings,
-        &.ms-Icon--SecurityGroup {
-            font-size: large;
-        }
-        &.ms-Icon--SecurityGroup {
-            margin-top: 10px;
-        }
-    }
-    #ContextualMenuButtonDiv {
+    .sp-siteContent-contextMenu {
         .ms-Button--icon {
             min-width: 35px;
             &:hover {
-                background-color: #c6c6c6;
+                background-color: lightgray !important;
             }
         }
     }
