New Version Tested and fixed

--- a/src/scripts/actions/styles/components.scss
+++ b/src/scripts/actions/styles/components.scss
@@ -358,6 +358,7 @@ $dividerColor: $ms-color-neutralLight;
     }
     #ContextualMenuButton {
         width: 100%;
+        height: 30px;
         font-size: 14px !important;
         i {
           vertical-align: middle;
