--- a/src/scripts/actions/styles/components.scss
+++ b/src/scripts/actions/styles/components.scss
@@ -276,6 +276,16 @@ $dividerColor: $ms-color-neutralLight;
     .spProp-create-button {
         padding-left: 17px;
     }
+    .action-buttons{
+        display: inline-flex;
+        top: -5px;
+        right: -10px;
+        position: absolute;
+        > a {
+            margin-top: 0 !important;
+            padding-top: 0 !important;
+        }
+    }
 }
 
 
